design fixes of file input, alignment usersidebar, reportforminput

--- a/public/dashboard/css/vertical-layout-light/style.css
+++ b/public/dashboard/css/vertical-layout-light/style.css
@@ -49079,6 +49079,13 @@ div.tagsinput span.tag a {
 
 /* datepicker here */
 
+.DatePicker {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+}
 .DatePicker .DatePicker__input {
   text-align: left;
+  position: relative;
+  z-index: 1;
 }
